2023-11-28  Xiaowei Zhan  <zhanxw@bunny.swmed.edu>

	* Fix Rprintf() related issues

2023-09-01  Xiaowei Zhan  <zhanxw@bunny.swmed.edu>

	* Change Date field

2023-08-31  Xiaowei Zhan  <zhanxw@bunny.swmed.edu>

	* Fix roxygen2 related issue
	* Fix realloc(size = 0) issue
	* Fix function prototype warning

2023-04-1  Xiaowei Zhan  <zhanxw@bunny.swmed.edu>

	* Remove travis (substituted by GitHub actions)
	* Fix license issues

2023-04-1  Xiaowei Zhan  <zhanxw@bunny.swmed.edu>

	* Fix uninitialize return values

2023-01-28  Xiaowei Zhan  <zhanxw@bunny.swmed.edu>

	* Change CXX11 to CXX17 in configure.ac

2023-01-24  Xiaowei Zhan  <zhanxw@bunny.swmed.edu>

	* Fix warnings related to "Compiled code should not call entry points"

2022-11-14  Xiaowei Zhan  <zhanxw@bunny.swmed.edu>

	* Fix warnings when this compiler option is on: [-Wstrict-prototypes]

2021-11-07  Xiaowei Zhan  <zhanxw@bunny.swmed.edu>

	* Change configure.ac to comply to CRAN policy
	* Fix broken links

2019-08-23  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Fix a bug related to column names when using single chrom indices

2019-08-21  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Improve column names when using single chrom indices

2019-03-21  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Support single chromosome index for bcf

2019-02-23  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Fix a bug related to query BGenIndex file (use int64)

2019-01-09  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Support single chromosome index for vcf

2019-01-05  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Revise R/CPP interface codes

2019-01-02  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Add partial supports for binary PLINK file formats

2018-11-29  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Add supports for BGEN file formats
	* Fix CRAN reported warnings (e.g. compiler flags)
